--- a/styles.css
+++ b/styles.css
@@ -57,10 +57,6 @@ main{
     padding: 0;
 }
 
-.container li{
-    margin: 6px 0;
-}
-
 .container > * {
     margin: 6px 0px 6px 0px;
 }
@@ -80,4 +76,9 @@ main{
 
 .second{
     display: none;
+}
+
+.projectName:hover{
+    cursor: pointer;
+    text-decoration: underline;
 }
