--- a/styles.css
+++ b/styles.css
@@ -82,3 +82,14 @@ main{
     cursor: pointer;
     text-decoration: underline;
 }
+
+@media only screen and (max-width: 1100px) {
+    main{
+        flex-direction: column;
+        align-items: center;
+    }
+
+    section{
+        width: 90%;
+    }
+}
