--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,9 @@
+
+
 html{
     font-family: 'Source Code Pro', monospace;
     color: white;
+    height: 100vh;
 }
 
 header {
@@ -19,20 +22,21 @@ header {
 
 body {
     margin: 0;
-    padding: none;
     background-color: black;
-    padding: 3rem;
+    padding: 3rem 6rem;
+    min-height: 100vh;
+    box-sizing: border-box;
 }
 
 section{
     width: 33%;
-    
-    padding: 0 3rem 0 3rem;
 }
 
 main{
     width: 100%;
     display: flex;
+    gap: 3rem;
+    
 }
 
 .yellow{
@@ -84,6 +88,8 @@ main{
     text-decoration: underline;
 }
 
+
+
 @media only screen and (max-width: 1100px) {
     main{
         flex-direction: column;
@@ -92,5 +98,13 @@ main{
 
     section{
         width: 90%;
+    }
+
+    body{
+        padding: 2rem 2.5rem;
+    }
+
+    footer{
+        font-size: 0.8rem;
     }
 }
